kubeflow/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/name: istio-ingress-gateway
  servers:
    - hosts:
        - kubeflow.aaw-dev.cloud.statcan.ca
      port:
        name: http
        number: 80
        protocol: HTTP2
      tls:
        httpsRedirect: true
    - hosts:
        - kubeflow.aaw-dev.cloud.statcan.ca
      port:
        name: https-kubeflow
        number: 443
        protocol: HTTPS
      tls:
        cipherSuites:
          - TLS_AES_256_GCM_SHA384
          - TLS_AES_128_GCM_SHA256
          - ECDHE-RSA-AES256-GCM-SHA384
          - ECDHE-RSA-AES128-GCM-SHA256
        credentialName: wildcard-tls
        maxProtocolVersion: TLSV1_2
        minProtocolVersion: TLSV1_2
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
